tests/cases/modules/ok/file-module-main.ari
mod mathlib;

fn main() -> i64 {
  return mathlib::add(20, 2);
}
