tests/cases/modules/errors/private-module-enum-type.ari
mod Hidden {
  enum Secret {
    A,
  }

  pub fn make() -> Secret {
    return A;
  }
}

fn take(value: Hidden::Secret) -> i64 {
  return 0;
}

fn main() -> i64 {
  return take(Hidden::make());
}
